sumo/tests/netgen/grid/errors/grid_y_number__zero/errors.netgen
Error: The number of nodes must be at least 2 in both directions.
Quitting (on error).
